--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
             <a href="https://cassfolk.github.io/humidity/">  
               <img class="image selectimage" src="https://raw.githubusercontent.com/cassfolk/HW.Folkers/master/09-web-design-challenge/Resources/assets/images/Fig2.png" alt="City Latitude vs. Humidity" title="Humidity">
             </a>
-            <a href="https://cassfolk.github.io/cloudiness/#">
+            <a href="https://cassfolk.github.io/cloudiness/">
               <img class="image selectimage " src="https://raw.githubusercontent.com/cassfolk/HW.Folkers/master/09-web-design-challenge/Resources/assets/images/Fig3.png" alt="City Latitude vs. Cloudiness" title="Cloudiness">
             </a>
-            <a href="https://cassfolk.github.io/windspeed/#">
+            <a href="https://cassfolk.github.io/windspeed/">
               <img class="image selectimage" src="https://raw.githubusercontent.com/cassfolk/HW.Folkers/master/09-web-design-challenge/Resources/assets/images/Fig4.png" alt="City Latitude vs. Windspeed" title="Windspeed">
             </a>
           </div>
